vine-video  and discount-wine section

--- a/index.html
+++ b/index.html
@@ -465,6 +465,82 @@
                   </button>
                 </div>
               </div>
+              <div class="swiper-slide">
+                <div class="swiper__slide-wine slide-wine">
+                  <div class="slide-wine__image-container">
+                    <img
+                      src="img/wine/riesling.jpeg"
+                      alt="Riesling"
+                      class="slide-wine__image"
+                    />
+                  </div>
+                  <p class="slide-wine__name wine-name">Riesling</p>
+                  <p class="slide-wine__price wine-price">16.00 USD</p>
+                  <button
+                    class="slide-wine__button button-primary"
+                    type="button"
+                  >
+                    Add to card
+                  </button>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper__slide-wine slide-wine">
+                  <div class="slide-wine__image-container">
+                    <img
+                      src="img/wine/pinot-noir.jpeg"
+                      alt="Pinot Noir"
+                      class="slide-wine__image"
+                    />
+                  </div>
+                  <p class="slide-wine__name wine-name">Pinot Noir</p>
+                  <p class="slide-wine__price wine-price">12.00 USD</p>
+                  <button
+                    class="slide-wine__button button-primary"
+                    type="button"
+                  >
+                    Add to card
+                  </button>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper__slide-wine slide-wine">
+                  <div class="slide-wine__image-container">
+                    <img
+                      src="img/wine/soave.jpeg"
+                      alt="Saove"
+                      class="slide-wine__image"
+                    />
+                  </div>
+                  <p class="slide-wine__name wine-name">Saove</p>
+                  <p class="slide-wine__price wine-price">12.00 USD</p>
+                  <button
+                    class="slide-wine__button button-primary"
+                    type="button"
+                  >
+                    Add to card
+                  </button>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper__slide-wine slide-wine">
+                  <div class="slide-wine__image-container">
+                    <img
+                      src="img/wine/zifandel.jpeg"
+                      alt="Zifandel"
+                      class="slide-wine__image"
+                    />
+                  </div>
+                  <p class="slide-wine__name wine-name">Zifandel</p>
+                  <p class="slide-wine__price wine-price">14.00 USD</p>
+                  <button
+                    class="slide-wine__button button-primary"
+                    type="button"
+                  >
+                    Add to card
+                  </button>
+                </div>
+              </div>
             </div>
             <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
@@ -618,7 +694,7 @@
                   />
                 </div>
                 <p class="craft-wines__name wine-name">Cabernet</p>
-                <p class="craft-wines__price wine-price">10.00 USD</p>
+                <p class="craft-wines__price wine-price">17.00 USD</p>
                 <button
                   class="craft-wines__button button-primary"
                   type="button"
@@ -635,7 +711,7 @@
                   />
                 </div>
                 <p class="craft-wines__name wine-name">Pinot Noir</p>
-                <p class="craft-wines__price wine-price">10.00 USD</p>
+                <p class="craft-wines__price wine-price">12.00 USD</p>
                 <button
                   class="craft-wines__button button-primary"
                   type="button"
@@ -652,7 +728,7 @@
                   />
                 </div>
                 <p class="craft-wines__name wine-name">Riesling</p>
-                <p class="craft-wines__price wine-price">10.00 USD</p>
+                <p class="craft-wines__price wine-price">16.00 USD</p>
                 <button
                   class="craft-wines__button button-primary"
                   type="button"
@@ -669,7 +745,7 @@
                   />
                 </div>
                 <p class="craft-wines__name wine-name">Syrah</p>
-                <p class="craft-wines__price wine-price">10.00 USD</p>
+                <p class="craft-wines__price wine-price">13.00 USD</p>
                 <button
                   class="craft-wines__button button-primary"
                   type="button"
@@ -686,7 +762,7 @@
                   />
                 </div>
                 <p class="craft-wines__name wine-name">Sauvignon Blanc</p>
-                <p class="craft-wines__price wine-price">10.00 USD</p>
+                <p class="craft-wines__price wine-price">12.00 USD</p>
                 <button
                   class="craft-wines__button button-primary"
                   type="button"
@@ -703,7 +779,7 @@
                   />
                 </div>
                 <p class="craft-wines__name wine-name">Zifandel</p>
-                <p class="craft-wines__price wine-price">10.00 USD</p>
+                <p class="craft-wines__price wine-price">14.00 USD</p>
                 <button
                   class="craft-wines__button button-primary"
                   type="button"
@@ -720,7 +796,7 @@
                   />
                 </div>
                 <p class="craft-wines__name wine-name">Saove</p>
-                <p class="craft-wines__price wine-price">10.00 USD</p>
+                <p class="craft-wines__price wine-price">12.00 USD</p>
                 <button
                   class="craft-wines__button button-primary"
                   type="button"
@@ -733,10 +809,151 @@
         </div>
       </section>
       <section class="wine-video">
-        <div class="wine-video__container container"></div>
+        <div class="wine-video__container container">
+          <div class="wine-video__header">
+            <p class="wine-video__subtitle subtitle">History</p>
+            <h2 class="wine-video__title">In Vino Veritas</h2>
+            <div class="wine-video__image-container illustration">
+              <img
+                src="img/illustration.svg"
+                alt="Illustration"
+                class="wine-video__image"
+              />
+            </div>
+            <p class="wine-video__description description">
+              Alcaeus, a famous Greek poet, said that the truth can be found in
+              wine. Let's dive into the history of the most famous wine
+              varieties to see the truth about them.
+            </p>
+            <a
+              class="wine-video__link"
+              href="https://www.youtube.com/channel/UCGhHRQfrxCEpo-LJsG1xxIw"
+            >
+              <span>Watch on Youtube</span>
+              <span class="arrow-icon">
+                <svg
+                  width="26"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  version="1.1"
+                  x="0px"
+                  y="0px"
+                  viewBox="0 0 100 100"
+                  enable-background="new 0 0 100 100"
+                  xml:space="preserve"
+                  style="max-width: 100%"
+                  height="100%"
+                >
+                  <g fill="currentColor">
+                    <polygon
+                      points="76.389,53.202 76.389,63.601 89.991,50.003 76.39,36.401 76.389,46.8 10.011,46.8 10.011,53.201  "
+                      fill="currentColor"
+                    ></polygon>
+                  </g>
+                </svg>
+              </span>
+            </a>
+          </div>
+          <div class="wine-video__play">
+            <a
+              href="https://www.youtube.com/channel/UCGhHRQfrxCEpo-LJsG1xxIw"
+              class="wine-video__play-svg"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                version="1.1"
+                x="0px"
+                y="0px"
+                viewBox="0 0 100 100"
+                enable-background="new 0 0 100 100"
+                xml:space="preserve"
+                style="max-width: 100%"
+                height="100%"
+              >
+                <g fill="currentColor">
+                  <g fill="currentColor">
+                    <path
+                      fill="currentColor"
+                      d="M50,0C22.427,0-0.002,22.43-0.002,50c0,27.571,22.43,50,50.003,50c27.574,0,50.003-22.429,50.003-50    C100.004,22.43,77.574,0,50,0z M50,94.231C25.61,94.231,5.767,74.39,5.767,50C5.767,25.611,25.61,5.77,50,5.77    S94.234,25.611,94.234,50C94.234,74.39,74.391,94.231,50,94.231z"
+                    ></path>
+                  </g>
+                  <g fill="currentColor">
+                    <path
+                      fill="currentColor"
+                      d="M44.783,24.503c-0.828-0.827-2.068-1.075-3.144-0.625c-1.076,0.446-1.78,1.499-1.78,2.665v46.915    c0,1.166,0.704,2.218,1.78,2.666c0.357,0.149,0.732,0.22,1.104,0.22c0.75,0,1.487-0.293,2.04-0.845l23.455-23.459    c1.127-1.126,1.127-2.952,0-4.078L44.783,24.503z M45.628,66.491V33.507L62.119,50L45.628,66.491z"
+                    ></path>
+                  </g>
+                </g>
+              </svg>
+              <p>Play video</p>
+            </a>
+          </div>
+        </div>
       </section>
       <section class="discount">
-        <div class="discount__container container"></div>
+        <div class="discount__container container">
+          <div class="discount__main-content">
+            <div class="discount__item-background one-card">
+              <div class="discount__item-content">
+                <h3 class="discount__title">Red Whines</h3>
+                <div class="divider"></div>
+                <p class="discount__subtitle text">
+                  Great selection of red wines for you.
+                </p>
+                <a href="#" class="discount__btn button-primary"
+                  >Shop red wines</a
+                >
+              </div>
+            </div>
+            <div class="discount__item-background two-card">
+              <div class="discount__item-content">
+                <h3 class="discount__title">White Wines</h3>
+                <div class="divider"></div>
+                <p class="discount__subtitle text">
+                  Top white wines for any occasion.
+                </p>
+                <a href="#" class="discount__btn button-primary"
+                  >Shop red wines</a
+                >
+              </div>
+            </div>
+            <div class="discount__item-background three-card">
+              <div class="discount__item-content">
+                <h3 class="discount__title">Get your 15% personal discount</h3>
+                <p class="discount__subtitle text">
+                  Join our club of wine-lovers and be the first to know about
+                  the special offers.
+                </p>
+                <a href="#" class="discount__link button-secondary">
+                  <span>Join</span>
+                  <span class="arrow-icon">
+                    <svg
+                      width="26"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      version="1.1"
+                      x="0px"
+                      y="0px"
+                      viewBox="0 0 100 100"
+                      enable-background="new 0 0 100 100"
+                      xml:space="preserve"
+                      style="max-width: 100%"
+                      height="100%"
+                    >
+                      <g fill="currentColor">
+                        <polygon
+                          points="76.389,53.202 76.389,63.601 89.991,50.003 76.39,36.401 76.389,46.8 10.011,46.8 10.011,53.201  "
+                          fill="currentColor"
+                        ></polygon>
+                      </g>
+                    </svg>
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="awards">
         <div class="awards__container container"></div>
