draft shopping cart

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     class="slide-wine__button button-primary"
                     type="button"
                   >
-                    Add to card
+                    Add to cart
                   </button>
                 </div>
               </div>
@@ -424,7 +424,7 @@
                     class="slide-wine__button button-primary"
                     type="button"
                   >
-                    Add to card
+                    Add to cart
                   </button>
                 </div>
               </div>
@@ -443,7 +443,7 @@
                     class="slide-wine__button button-primary"
                     type="button"
                   >
-                    Add to card
+                    Add to cart
                   </button>
                 </div>
               </div>
@@ -462,7 +462,7 @@
                     class="slide-wine__button button-primary"
                     type="button"
                   >
-                    Add to card
+                    Add to cart
                   </button>
                 </div>
               </div>
@@ -481,7 +481,7 @@
                     class="slide-wine__button button-primary"
                     type="button"
                   >
-                    Add to card
+                    Add to cart
                   </button>
                 </div>
               </div>
@@ -500,7 +500,7 @@
                     class="slide-wine__button button-primary"
                     type="button"
                   >
-                    Add to card
+                    Add to cart
                   </button>
                 </div>
               </div>
@@ -519,7 +519,7 @@
                     class="slide-wine__button button-primary"
                     type="button"
                   >
-                    Add to card
+                    Add to cart
                   </button>
                 </div>
               </div>
@@ -538,7 +538,7 @@
                     class="slide-wine__button button-primary"
                     type="button"
                   >
-                    Add to card
+                    Add to cart
                   </button>
                 </div>
               </div>
@@ -668,144 +668,7 @@
             </p>
           </div>
           <div class="craft-wines__main-content">
-            <div class="craft-wines__list">
-              <div class="craft-wines__item">
-                <div class="craft-wines__image-container">
-                  <img
-                    src="img/wine/pinot-grigio.jpeg"
-                    alt="Pinot Grigio"
-                    class="craft-wines__image"
-                  />
-                </div>
-                <p class="craft-wines__name wine-name">Pinot Grigio</p>
-                <p class="craft-wines__price wine-price">10.00 USD</p>
-                <button
-                  class="craft-wines__button button-primary"
-                  type="button"
-                >
-                  Add to card
-                </button>
-              </div>
-              <div class="craft-wines__item">
-                <div class="craft-wines__image-container">
-                  <img
-                    src="img/wine/cabernet.jpeg"
-                    alt="Cabernet"
-                    class="craft-wines__image"
-                  />
-                </div>
-                <p class="craft-wines__name wine-name">Cabernet</p>
-                <p class="craft-wines__price wine-price">17.00 USD</p>
-                <button
-                  class="craft-wines__button button-primary"
-                  type="button"
-                >
-                  Add to card
-                </button>
-              </div>
-              <div class="craft-wines__item">
-                <div class="craft-wines__image-container">
-                  <img
-                    src="img/wine/pinot-noir.jpeg"
-                    alt="Pinot Noir"
-                    class="craft-wines__image"
-                  />
-                </div>
-                <p class="craft-wines__name wine-name">Pinot Noir</p>
-                <p class="craft-wines__price wine-price">12.00 USD</p>
-                <button
-                  class="craft-wines__button button-primary"
-                  type="button"
-                >
-                  Add to card
-                </button>
-              </div>
-              <div class="craft-wines__item">
-                <div class="craft-wines__image-container">
-                  <img
-                    src="img/wine/riesling.jpeg"
-                    alt="Riesling"
-                    class="craft-wines__image"
-                  />
-                </div>
-                <p class="craft-wines__name wine-name">Riesling</p>
-                <p class="craft-wines__price wine-price">16.00 USD</p>
-                <button
-                  class="craft-wines__button button-primary"
-                  type="button"
-                >
-                  Add to card
-                </button>
-              </div>
-              <div class="craft-wines__item">
-                <div class="craft-wines__image-container">
-                  <img
-                    src="img/wine/syrah.jpeg"
-                    alt="Syrah"
-                    class="craft-wines__image"
-                  />
-                </div>
-                <p class="craft-wines__name wine-name">Syrah</p>
-                <p class="craft-wines__price wine-price">13.00 USD</p>
-                <button
-                  class="craft-wines__button button-primary"
-                  type="button"
-                >
-                  Add to card
-                </button>
-              </div>
-              <div class="craft-wines__item">
-                <div class="craft-wines__image-container">
-                  <img
-                    src="img/wine/sauvignon-blanc.jpeg"
-                    alt="Sauvignon Blanc"
-                    class="craft-wines__image"
-                  />
-                </div>
-                <p class="craft-wines__name wine-name">Sauvignon Blanc</p>
-                <p class="craft-wines__price wine-price">12.00 USD</p>
-                <button
-                  class="craft-wines__button button-primary"
-                  type="button"
-                >
-                  Add to card
-                </button>
-              </div>
-              <div class="craft-wines__item">
-                <div class="craft-wines__image-container">
-                  <img
-                    src="img/wine/zifandel.jpeg"
-                    alt="Zifandel"
-                    class="craft-wines__image"
-                  />
-                </div>
-                <p class="craft-wines__name wine-name">Zifandel</p>
-                <p class="craft-wines__price wine-price">14.00 USD</p>
-                <button
-                  class="craft-wines__button button-primary"
-                  type="button"
-                >
-                  Add to card
-                </button>
-              </div>
-              <div class="craft-wines__item">
-                <div class="craft-wines__image-container">
-                  <img
-                    src="img/wine/soave.jpeg"
-                    alt="Saove"
-                    class="craft-wines__image"
-                  />
-                </div>
-                <p class="craft-wines__name wine-name">Saove</p>
-                <p class="craft-wines__price wine-price">12.00 USD</p>
-                <button
-                  class="craft-wines__button button-primary"
-                  type="button"
-                >
-                  Add to card
-                </button>
-              </div>
-            </div>
+            <div class="craft-wines__list"></div>
           </div>
         </div>
       </section>
@@ -1629,6 +1492,20 @@
         </div>
       </div>
     </footer>
+    <section id="shopping-card" class="shopping-card">
+      <div class="shopping-card__container">
+        <div class="shopping-card__header">
+          <h3 class="shopping-card__title">Shopping Card</h3>
+          <button>+</button>
+        </div>
+        <div>
+          <p>Products</p>
+          <ul id="cart" class="shopping-cart__list"></ul>
+          <div id="total" class="shopping-cart__total-amount"></div>
+        </div>
+      </div>
+    </section>
+
     <script src="js/menu-burger.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="module" src="js/swiper-testimonials.js"></script>
@@ -1636,5 +1513,8 @@
     <script src="js/accordion.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@2.7.2/lightgallery.min.js"></script>
     <script type="module" src="js/gallery.js"></script>
+    <script type="module" src="js/products.js"></script>
+    <script type="module" src="js/products-card.js"></script>
+    <script type="module" src="js/shopping-cart.js"></script>
   </body>
 </html>
